--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -14,5 +14,59 @@
 经朋友介绍，我摘到了一套苏联作家爱伦堡的回忆录《人、岁月、生活》。
 爱伦堡作为本世纪者初俄国现代主义诗歌运动的参加者, 记述并描写了同时代许多声名赫赫的诗人形象。
 
+我被这本书深深地吸引,反复读了多次, 渐渐觉得遗憾，
+为什么这个时代同时产生了这么多一流的大诗人，而我们却看不到他们的作品? 
+我国翻译界从未系统地介绍过这个时代的诗歌，大多数诗人则完全没有介绍。
+外国文学研究和评论也对这些诗人持最大限度的缄默态度。
+是否因为这些诗人常被冠之以 “颓废派” 或 “现代派” 而使翻译者有所顾虑呢?
+
+于是，我在几位朋友的鼓励和要求下，开始系统地翻译莫斯科大学出版的《十九世纪末至二十世纪初的俄罗斯诗歌》一书。
+我首先译出的是帕斯捷尔纳克和曼杰施塔姆的几首诗。
+帕斯捷尔纳克，这位 1957 年的诺贝尔奖金获得者的早期作品令我着迷：
+
+>二月。墨水足够用来痛哭！  
+>大放悲声抒写二月，  
+>一直到轰响的泥泞  
+>燃起黑色的春天。  
+
+而曼杰施塔姆的早期作品带着他特有的忧郁、悲伤和沉默，那种本质性的纯净完全接近音乐。
+
+>什么也无需诉说，  
+>什么也不应该教别人。  
+>  
+>这颗黑色的野兽的心  
+>多么犹豫，多么美好。  
+
+这位年轻诗人问道:
+
+>给予我这肉体一一我拿它怎么办，  
+>这唯一的属于我的东西?  
+
+这几首译诗也受到了朋友们的喜爱。很快，花城出版社新创刊的《青年诗坛》就将它们发表出来，
+并且我收到了读者的来信。这更鼓励了我的热情，我的译笔开始触到安年斯基、索洛古勃、
+茨维塔耶娃、阿赫玛托娃、赫列勃尼可夫等的作品。
+
+### 二
+
+十九世纪末到二十世纪初正是俄国社会发生巨大变化的时代。
+1905年和1917年的两次革命对这些诗人和作家无疑产生了重大影响，这种影响在许多作品中也有所体现。
+对当时的社会风暴，不同的人采取了不同的方式对待，有的人欢迎并积极地参加了革命, 有的人则观望和等侍, 
+也有的人极端仇视新生的苏维埃政权, 纷纷移居西方。
+
+这本书所译介的诗人每个人的社会背景以及对革命的态度都不同，
+且每个诗人的生活经历亦很复杂。在这里我不想对此过多探讨。
+文学不是政治学，也不是社会学。艺术有其内在的标准和独特的价值规律。
+对人性这个人类既定领域的揭示和挖掘，对美学这个具有无限可能性的领域的开拓和探索，这是艺术最基本的衡量标准。
+一个作家和诗人的成就大小与否主要看他对这两个领域的开创和探讨的深浅与否。
+因此，为了尽量全面地介绍那个时代的诗歌运动, 我也译介了梅列日柯夫斯基、吉皮乌斯、古米廖夫等人的作品。
+据报道，苏联国内成立了保护曼杰施塔姆遗作委员会，恢复这位死于斯大林时代的诗人的声誉, 
+同时，部分报刊也登载了古米廖夫的作品。
+
+### 三
+
+在那个被称为“俄罗斯诗歌的白银时代”，许多创作风格截然不同的大诗人同时活跃在诗歌舞台上。
+象征派作为俄国现代主义诗歌运动的第一大流派无疑取得了重大艺术成就，且对后来的阿克梅派和未来派产生了巨大的影响。
+
+
 
 （植字未完待续）
