--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -50,7 +50,7 @@
 
 十九世纪末到二十世纪初正是俄国社会发生巨大变化的时代。
 1905年和1917年的两次革命对这些诗人和作家无疑产生了重大影响，这种影响在许多作品中也有所体现。
-对当时的社会风暴，不同的人采取了不同的方式对待，有的人欢迎并积极地参加了革命, 有的人则观望和等侍, 
+对当时的社会风暴，不同的人采取了不同的方式对待，有的人欢迎并积极地参加了革命, 有的人则观望和等待, 
 也有的人极端仇视新生的苏维埃政权, 纷纷移居西方。
 
 这本书所译介的诗人每个人的社会背景以及对革命的态度都不同，
