--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -66,7 +66,25 @@
 
 在那个被称为“俄罗斯诗歌的白银时代”，许多创作风格截然不同的大诗人同时活跃在诗歌舞台上。
 象征派作为俄国现代主义诗歌运动的第一大流派无疑取得了重大艺术成就，且对后来的阿克梅派和未来派产生了巨大的影响。
-
+布留索夫对诗歌美学的纲领性观念，巴尔蒙特对诗歌形式的创新, 都具有建设性的意义。
+第二代象征派诗人布洛克和别雷则直接继承了老一代象征派的诗歌经验。
+
+亚历山大 ‧ 布洛克，这位十月革命前最重要的诗人始终将诗歌抒情主人公的命运同祖国俄罗斯的命运联系在一起。
+他写道：“在辽归的远方你是孤儿院! 没有你怎样生活和痛哭!” 
+在《秋天的爱》一诗中，诗人对故乡广阔的土地寄予了无跟深情。
+由于祖国和人民的苦难，诗人的形象成了耶稣式的受难者。
+在著名的《陌生女郎》一诗中，诗人表达了那个了时代俄罗斯知识分子特有的迷惘和苦闷，以及对于美好和纯洁事物的向往。
+在长诗《十二个》中布洛克表达了对十月革命的欢迎和对旧世界的仇恨。
+但他却赋予了革命以宗教色彩，把它看做新救世主的到来。
+
+布洛克的诗歌艺术具有古典大师的质朴、深刻和明快,
+对语言有特殊的敏感, 可以当之无愧是普希金和菜蒙托夫的继承者。
+
+ 
+
+### 四
+
+当象征主义危机的时候，阿克梅派的诗人们开
 
 
 （植字未完待续）
