--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -84,7 +84,81 @@
 
 ### 四
 
-当象征主义危机的时候，阿克梅派的诗人们开
-
+当象征主义危机的时候，阿克梅派的诗人们开始着手象征主义哲学和美学观念现代化的尝试。
+古米廖夫成为“诗人车间"的领袖。
+在阿克梅派中产生了两位伟大的抒情诗人，那就是安娜 ‧ 阿赫玛托娃和奥西普 ‧ 曼杰施塔姆。
+
+阿赫玛托娃抒情诗的结构充满了戏剧性，诗中充满了对生活的不和谐的感受，以及对即将来临的灾难的感受。
+她的诗中经常出现强烈的痛苦，不可避免的忧愁、不幸和对死亡的思考。
+她写道: “心灵多么痛苦, 但却不知道为何而忧伤。” “我的心多么忧郁，我莫不是在等待那死亡的时刻? ” 
+当时的文艺批评不只一次指出阿赫玛托娃诗歌的艺术力量：“你倾听她的诗歌, 犹如听教堂的钟声, 眼里燃着希望, 你会全身心都充满对真正人的精神的浪漫主义感受。”
+
+爱情一一是阿赫玛托娃抒情诗的主要题材。
+对于她, 爱情是衡量一切价值的尺度, 是理解生活真理和思想的方法。
+爱情使女主人公成为异常敏感的人，赠予她鉴别谎言和真理的能力，使她不断地感受明快,纯洁和真正的事物。
+对爱情的信仰和追求, 不仅给她带来巨大痛苦, 同时也丰富了她的艺术感受力。
+
+>世上的美酒多么香甜，  
+>情网更稠密。  
+>有朝一日，孩子们  
+>将在书本上读到我的名字。  
+>
+>得知了这个忧伤的故事，  
+>让他们调皮地微笑吧……  
+>既然我没得到爱情和恬静，
+>请赠予我痛苦的荣誉。  
+>
+
+阿赫玛托娃的抒情诗是俄罗斯诗歌宝库中的珍贵遗产, 对当代苏联诗歌影响巨大。
+
+奥西普 ‧ 曼杰施塔姆这个名字对我国诗歌爱好者是陌生的。
+尽管长期以来由于种种原因，他的作品不能通过公开信息为人们所接受，但他的诗歌艺术是经得起时间考验的。
+对曼杰施塔姆作品的发现和研究，如局对奥地利作家卡夫卡的发现一样，对世界文化意义重大。
+我们没有理由拒绝这份用血泪和整个生命写就的文学遗产。
+
+曼杰施塔姆生前曾出版两本诗集《石头》(1913) 和《悲哀》(1916年, 原文为古拉丁语), 很快便受到了当时文学界和同时代作家的好评。
+马雅可夫斯基称赞他的《十二月党人》一诗结尾处是天才的创作。
+阿赫玛托娃是曼氏的阿克梅主义同事和终生的朋友，她高度评价曼氏的作品。
+而与各诗歌团体均无联系的女诗人玛丽娜 ‧ 茨维塔耶娃则把曼杰施塔姆比作俄罗斯诗歌之父杰尔查文，并写了一首充满真挚情感的诗献给他。
+
+曼杰施塔姆的一些极为个人化的抒情诗都不是直抒胸臆而是通过复杂的文学联想来表达。
+他在诗中经常使用非理性的诗歌语言，以及超现实主义的意象，从而显出他与普希金、莱蒙托夫等古典大师的不同之处。
+>
+>我冻得直哆嗦——  
+>我想缄口无言!  
+>而黄金在天空舞蹈，  
+>命令我歌唱。  
+>  
+>苦恼吧，不安的音乐家，  
+>爱吧，回忆并哭泣吧，  
+>抓住从暗淡的行星上  
+>抛出来的轻球!  
+>  
+
+由语言和音乐的关系，使诗人联想到诞生和死亡的关系，心灵和肉体的关系：
+
+>
+>仍然做你的浪花吧，阿佛洛提特<sup>[1](#myfootnote1)</sup>  
+>语言，回到音乐中去吧，  
+>心啊,让心羞愧吧，  
+>并和最基本的生命融为一体。  
+>
+
+这就是曼杰施塔姆对艺术最本质的观念。
+在许多抒情诗中, 诗人写到死亡, 命中注定的厄运、贫穷和孤独。
+他几乎所有的诗都是忧愁的、悲伤的。在气质上，他是一个彻底的浪漫主义者。
+他抒写大自然的美丽和忧伤, 他关注古代世界文化和古代建筑，同时, 他还是一位重造历史时代色彩的巨匠。
+
+他的晚年创作同他的生活息息相关。
+在长期的流放生涯中, 他写下了许多充满苦难和绝望, 同时又充满巨大艺术秘密的诗篇：
+>
+>沉默吧，任何时候对任何人也不要说任何事。  
+>时间在火灾遗址上歌唱！  
+>
+诗人的命运是非常悲惨的。1938 年他在流放到东西伯利亚的弗拉迪沃斯托克（即海参崴） 的路上， 由于贫病交加而死去。
+
+<a name="myfootnote1">1</a>: 阿佛洛提特: 希腊神活中的爱神，即维纳斯。她是从海水浪花中诞生的。
+语言. 回到音乐中去却，
+
 
 （植字未完待续）
