--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -158,7 +158,28 @@
 诗人的命运是非常悲惨的。1938 年他在流放到东西伯利亚的弗拉迪沃斯托克（即海参崴） 的路上， 由于贫病交加而死去。
 
 <a name="myfootnote1">1</a>: 阿佛洛提特: 希腊神活中的爱神，即维纳斯。她是从海水浪花中诞生的。
-语言. 回到音乐中去却，
+
+### 五
+
+在阿克梅主义出现的同时，另一个诗歌流派未来派也诞生了。
+彼得堡的未来派，即 “自我未来派” 以伊戈尔 ‧ 谢维里亚宁为首; 
+莫斯科的未来派，即 “立体未来派” 以马雅可夫斯基和赫列勃尼可夫为首。
+未来主义最著名的口号是 “将普希金、陀思妥耶夫斯基、托尔斯泰统统从现代航船上抛下海去。” 
+他们在形式上的革新则主要是自己造词，改变固有的语法结构。
+这也给翻译工作带来很多困难。赫列勃尼可夫的诗歌实验几乎是不能翻译的。
+本书所译出的赫氏作品也仅供参考， 恐怕连全豹一斑也够不上。
+
+无论如何，马雅可夫斯基是本世纪一位伟大的诗歌巨人。
+他的作品在我国已大量翻译，故这个集子就没有再选。
+
+伊戈尔 ‧ 谢维里亚宁是十月革命前俄国文学界的著名人物。
+他经常在各种沙龙进行朗诵，曾享有 “诗王” 的美誉。
+他的诗集《轰响沸腾的大高脚杯》曾十次再版, 十分畅销。
+以致他写出这样的诗句: “我是天才谢维里亚宁, 为自己的胜利而狂喜。”
+
+谢维里亚宁无疑是有天才的，但不是第一流的
+
+
 
 
 （植字未完待续）
