--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -177,7 +177,87 @@
 他的诗集《轰响沸腾的大高脚杯》曾十次再版, 十分畅销。
 以致他写出这样的诗句: “我是天才谢维里亚宁, 为自己的胜利而狂喜。”
 
-谢维里亚宁无疑是有天才的，但不是第一流的
+谢维里亚宁无疑是有天才的，但不是第一流的天才。
+正如布留索夫曾指出: “在他的优秀诗作中，显示出他是一个准确感受自然和世界的抒情诗人。”
+但有些诗作审美趣味并不高, 且在 “讽刺和庸俗之间没有界限。” 
+值得注意的是， 谢维里亚宁的诗中出现了一些现代的哲学观念和思想， 如 “自我”， “荒诞” 等。
+在《生活荒诞的诗》中，他揭示了人类生活中本质性的矛盾，由不可必免的荒诞陷入一种悲观的相对主义。
+  
+>  
+>会见，为了分别……  
+>恋爱,为了不再爱……  
+>我真想哈哈大笑  
+>放声大哭一一不想活了!  
+>…………    
+>住在农村的向往都市，  
+>住在都市的向往偏僻乡野，  
+>到处都是没人心的  
+>人的面孔  
+>
+
+俄国的未来主义在美学观念上并没比象征主义走得很远, 且许多诗人的创作远离未来主义的原则。
+正如高尔基所说 “没有什么俄国的未来主义。有的只不过是谢维里亚宁, 马雅可夫斯基, 布尔留克和卡明斯基这几个人。”          、
+
+除此而外, 还存在一些未来主义团体。如 “诗的顶楼”、“抒情诗” 以及 “涡轮机” 等。
+当时的现代主义流演和团体间相互关系十分复杂， 还有许多没有特定团体面目的现代派诗人。
+其中最值得重视的诗人是鲍特斯 ‧ 帕斯捷尔纳克和玛丽娜 ‧ 茨维塔耶娃。
+
+### 六
+
+被称为 “另一个俄罗斯的代言人” 的帕斯捷尔纳克, 早年曾参入过名为 “涡轮机” 的文学园体, 其早期创作无疑受到象征派和未来派的影响。
+在《云中双子星座》(1914 年) 和《在街垒上》(1917 年) 这两本诗集中可以明显看到这种影响。
+1922 年出版的诗集《我的姐妹是生活》使他获得了广泛的声誉。他的诗歌创作走了一条独特的道路。
+他的思维和抒情方式与传统的俄罗斯诗歌也有很大不同。
+诗人年轻时代曾到德国的马堡大学攻读哲学，受到新康德主义思想的熏陶，
+同时，与德国诗人里尔克的友谊对他的创作也产生了影响。
+
+帕氏的抒情诗具有浓厚的哲学色彩，这是他作品的主要特征。
+帕斯捷尔纳克对大自然充满关切，他将每棵树, 每块石头都注入生命, 同时赋予它们思想和语言。
+请看他早期的抒情叙事诗《马堡》片断：
+
+>
+>我走入广场。我可以被认为是  
+>再次诞生者, 每件小事都活着，  
+>并不把我放在眼里，  
+>在自己离别的意义上升起。  
+>
+>石板晒得发热, 街的额头黧黑，    
+>鹅卵石怀着敌意  
+>望着天空, 风象船夫  
+>滑过椴树林。所有这些多么相似。    
+>
+
+帕斯捷尔纳克对大自然的关注远远胜过对历史和时代的关注。
+对于诗人，大自然本身就是一种无比壮丽、无比丰富的永恒。
+而诗人谈到历史时说：“任何人也不能创造历史，人们看不见历史, 犹如人们看不见青草生长一样。”
+但他的诗却是目不能见的存在物的证人和向导，其艺术魅力和微妙令人叹为观止。
+
+>
+>春天, 我从街上来, 那里杨树谅异，    
+>远方畏惧, 房屋担心倾塌，  
+>那里空气湛蓝, 好似刚出院的病人  
+>系在白衬衫上的领带。  
+> 
+
+帕氏在诗中经常使用隐喻，抒情主体与大自然的关系常常通过隐喻连接，
+但在一些极为个性化的诗中也出现非理性的语言以及混乱的思想体系，这也同生活本身一样令人难以认清真相。
+帕斯捷尔纳克力求真实地把握生命和死亡。
+正如他自己所说， “所谓诗，是一切存在物的热情冥思，是对死亡的诠释。”
+
+帕斯捷尔纳克反复谈到艺术的内含和艺术中的不变因素。
+他说： “千百年来的艺术都是同一种艺术，打动人心的仍然是其中的艺术。” 
+这一观念不仅表现在他对传统和革新的认识上, 同时, 也是他终生的信念。
+他一生都在用诗歌体验真理，接近永恒。
+
+帕斯捷尔纳克的诗歌成就受到国际性的肯定，早在 1946 年即被推荐为诺贝尔奖候选人。
+终于在 1958 年由于在 “现代抒情诗和俄罗斯伟大叙事诗传统方面取得重大成就” 而被授予诺贝尔奖金。
+
+著名女诗人玛丽娜 ‧ 茨维塔耶娃的创作道路也是非常独特的。
+她的诗歌天才从童年起就显露出来。她对生活和艺术都怀有巨大的热情。
+这种热情在诗中则表现为一种强烈的感染力, 使读者为之惊讶，为之吸引。
+ 
+  
+
 
 
 
