--- a/0 译者前言.md
+++ b/0 译者前言.md
@@ -39,7 +39,7 @@
 
 这位年轻诗人问道:
 
->给予我这肉体一一我拿它怎么办，  
+>给予我这肉体——我拿它怎么办，  
 >这唯一的属于我的东西?  
 
 这几首译诗也受到了朋友们的喜爱。很快，花城出版社新创刊的《青年诗坛》就将它们发表出来，
@@ -93,7 +93,7 @@
 她写道: “心灵多么痛苦, 但却不知道为何而忧伤。” “我的心多么忧郁，我莫不是在等待那死亡的时刻? ” 
 当时的文艺批评不只一次指出阿赫玛托娃诗歌的艺术力量：“你倾听她的诗歌, 犹如听教堂的钟声, 眼里燃着希望, 你会全身心都充满对真正人的精神的浪漫主义感受。”
 
-爱情一一是阿赫玛托娃抒情诗的主要题材。
+爱情——是阿赫玛托娃抒情诗的主要题材。
 对于她, 爱情是衡量一切价值的尺度, 是理解生活真理和思想的方法。
 爱情使女主人公成为异常敏感的人，赠予她鉴别谎言和真理的能力，使她不断地感受明快,纯洁和真正的事物。
 对爱情的信仰和追求, 不仅给她带来巨大痛苦, 同时也丰富了她的艺术感受力。
@@ -187,7 +187,7 @@
 >会见，为了分别……  
 >恋爱,为了不再爱……  
 >我真想哈哈大笑  
->放声大哭一一不想活了!  
+>放声大哭——不想活了!  
 >…………    
 >住在农村的向往都市，  
 >住在都市的向往偏僻乡野，  
@@ -255,11 +255,45 @@
 著名女诗人玛丽娜 ‧ 茨维塔耶娃的创作道路也是非常独特的。
 她的诗歌天才从童年起就显露出来。她对生活和艺术都怀有巨大的热情。
 这种热情在诗中则表现为一种强烈的感染力, 使读者为之惊讶，为之吸引。
- 
-  
 
+女诗人对爱情抱有宗教性的狂热和执着，对女人命运的体验使她写出这样的诗句:
+> 
+>对于女人——眼泪与血都是水——  
+>用眼泪与血洗面！  
+>爱情——不是母亲, 而是继母  
+>不要再等待审判和怜悯。  
+>……  
+>不要辩解——我晓得一切!    
+>我重又目光敏锐——但已不再是情人！  
+>在爱情退却的地方  
+>死亡园丁步步紧逼。  
+>  
+>树会自己摇晃!  
+>到时候熟果实自会落下……  
+>为这一切请宽恕我，  
+>我亲爱的,——我怎么惹你了！  
+>
 
+玛丽娜 ‧ 茨维塔耶娃是一个非常纯粹的人。
+她渴望望奇迹和爱情, 她难以接受平庸的生活, 她对人类抱着美好的理想和愿望。
+因此, 在那个时代, 她必然会得到许多失望和痛苦。
+当现实世界对她的压迫连艺术也不能救她的时候，她完全绝望了。
+1941 年女诗人自杀身亡。
 
+在俄罗斯诗歌史上, 叶赛宁、马雅可夫斯某在茨维塔那娃之前也是这样死去了。
+但这些艺术殉道者却留下伟大作品，成为人类文化的光荣和奇迹。
+诗人死了, 不朽的诗篇永远活着!
 
+十九世纪末至二十世纪初的俄罗斯诗坛群星类灿烂，光辉夺目。
+在同一时代同时产生了那么多风格各异的伟大诗人, 这在文学史上也是罕见的现象, 难怪要被人们誉为“俄罗斯诗歌的白银时代”！
 
-（植字未完待续）
+### 七
+
+在翻译这本诗选的几年时间里，我是带着巨大的热情和虔诚的态度来做这个工作的。这也使我受益匪浅。
+出于对翻译缺乏经验，对这些诗人的作品也未必完全理解, 因此, 难免有误译或曲解，诚恳地希望得到专家和读者的指正。
+同时，希望看到更好的译本出现。
+
+在翻译过程中，外国友人马思中先生为我提供了一些资料；
+部分疑难曾请教过莫斯科大学亚非学院华克生(Д.Н.Воскренсенский）教授; 
+刘光杰教授代为校看过部分帕斯捷尔纳克的诗稿；
+岳建一、王仲、北岛为此书联系出版给予过帮助，特在此一并致谢!
