Update 01 英诺肯基・安年斯基 00 诗人简介.md

--- a/01 英诺肯基・安年斯基 00 诗人简介.md
+++ b/01 英诺肯基・安年斯基 00 诗人简介.md
@@ -3,7 +3,7 @@
 英诺肯基・安年斯基(1856一1909)， 象征派诗人, 早在七十年代即开始写诗。
 他通晓古希腊、罗马和欧洲的诗歌, 成功地翻译了海涅、波德菜尔、瑶尔伦的诗歌。
 他的第一本也是生前唯一的诗集《寂静之歌》出版于1904年。
-在他死后的1910年出版了诗集k《雕虫花箱》。
+在他死后的1910年出版了诗集《雕虫花箱》。
 
 安年斯基关注现代城市人的日常生活，力图揭示生活中深奥的哲理。
 他描写人类生存的意义和无意义, 人的动机的虚伪性和真实性，生命价值的幻觉与实在。
